# plotly-dash-app

./: .dockerignore  .env.example  Dockerfile  Tiltfile  cloud-run.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  util.py
app/ag_grid_demo/: callbacks.py  layout.py
app/components/: breadcrumb.py  codeblock.py  sidebar.py
app/gapfinder_demo/: callbacks.py  data.py  layout.py
app/layout/: sidebar.py
app/navbar/: nav.py  navbar.py  search_bar.py  social_links.py  user_settings.py
app/pages/: ag_grid_demo.py  gapfinder_demo.py  home.py  realtime_demo.py  user_settings.py
app/realtime_demo/: callbacks.py  layout.py
tests/: test_ag_grid_demo.py  test_util.py
