[project]
requires-python = ">=3.10"

[tool.poetry]
name = "plotly-dash-app"
version = "0.1.0"
description = ""
authors = ["Theodros Zelleke <it@tzelleke.com>"]

[tool.poetry.dependencies]
dash = "^2.9.3"
dash-ag-grid = "^2.0.0"
dash-bootstrap-components = "^1.4.1"
dash-bootstrap-templates = "^1.0.8"
gunicorn = "^20.1.0"
numpy = "^1.24.2"
pandas = "^2.0.0"
plotly = "^5.14.1"
pydash = "^7.0.1"
pyorbital = "^1.7.3"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
dash = { extras = ["testing"], version = "^2.9.3" }
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
ruff = "^0.0.265"

[tool.pytest.ini_options]
addopts = [
    "--cov=app",
    "--no-cov-on-fail",
    "--import-mode=importlib",
    "-ra",
    "-q",
]
cache_dir = "~/pytest/.cache"
minversion = "6.0"
pythonpath = "."
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = "~/pytest/.coverage"
omit = [
    "app/__init__.py",
    "app/main.py",
    "*/layout.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision = 1
skip_covered = true
show_missing = true

[tool.black]
extend-exclude = '''
/(
    \.idea
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py310"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
extend-exclude = []
extend-select = ["I"]
line-length = 88
target-version = "py310"

[tool.ruff.isort]
force-sort-within-sections = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
